--- a/.config/raycast/extensions/0e43920f-bbf6-4582-bc3f-5f63092c915f/package.json
+++ b/.config/raycast/extensions/0e43920f-bbf6-4582-bc3f-5f63092c915f/package.json
@@ -11,11 +11,15 @@
   ],
   "contributors": [
     "FezVrasta",
+    "ickas",
     "metakirby5",
     "AlanHuang",
     "nirtamir2",
     "pernielsentikaer",
-    "rasitayaz"
+    "rasitayaz",
+    "popalay",
+    "litomore",
+    "ChanningKuo"
   ],
   "license": "MIT",
   "commands": [
@@ -107,11 +111,11 @@
           "value": "ceb"
         },
         {
-          "title": "🇨🇳 Chinese Simplified",
+          "title": "Chinese (Simplified)",
           "value": "zh-CN"
         },
         {
-          "title": "Chinese Traditional",
+          "title": "Chinese (Traditional)",
           "value": "zh-TW"
         },
         {
@@ -549,11 +553,11 @@
           "value": "ceb"
         },
         {
-          "title": "🇨🇳 Chinese Simplified",
+          "title": "Chinese (Simplified)",
           "value": "zh-CN"
         },
         {
-          "title": "🇹🇼 Taiwanese Mandarin",
+          "title": "Chinese (Traditional)",
           "value": "zh-TW"
         },
         {
@@ -942,12 +946,38 @@
       "required": false,
       "type": "checkbox",
       "default": true
+    },
+    {
+      "name": "defaultAction",
+      "title": "Default Action",
+      "description": "The default action to take when translating.",
+      "type": "dropdown",
+      "required": false,
+      "default": "copy",
+      "data": [
+        {
+          "title": "Copy to Clipboard",
+          "value": "copy"
+        },
+        {
+          "title": "Paste to App",
+          "value": "paste"
+        }
+      ]
+    },
+    {
+      "name": "proxy",
+      "title": "HTTP Proxy URL",
+      "description": "HTTP proxy URL to use for translation requests (e.g. http://proxy.example.com:8080)",
+      "type": "textfield",
+      "required": false
     }
   ],
   "dependencies": {
-    "@iamtraction/google-translate": "^2.0.1",
+    "undici": "^5.12.0",
     "@raycast/api": "^1.47.3",
-    "@raycast/utils": "^1.4.16"
+    "@raycast/utils": "^1.4.16",
+    "google-tts-api": "^2.0.2"
   },
   "devDependencies": {
     "@types/node": "~16.10.0",
@@ -955,8 +985,8 @@
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^7.32.0",
-    "prettier": "^3.0.1",
     "eslint-config-prettier": "^8.3.0",
+    "prettier": "^3.0.1",
     "typescript": "^4.4.3"
   },
   "scripts": {
