--- a/.config/raycast/extensions/82c92be8-822f-4923-a5bc-573830b674fb/package.json
+++ b/.config/raycast/extensions/82c92be8-822f-4923-a5bc-573830b674fb/package.json
@@ -9,7 +9,11 @@
     "bibixx",
     "GastroGeek",
     "pernielsentikaer",
-    "oasaleh"
+    "oasaleh",
+    "xilopaint",
+    "ridemountainpig",
+    "zakj",
+    "Visual-Studio-Coder"
   ],
   "license": "MIT",
   "commands": [
@@ -40,7 +44,18 @@
       "subtitle": "Coffee",
       "description": "Get the status of the current caffeination in your menu bar",
       "mode": "menu-bar",
-      "interval": "1m"
+      "interval": "1m",
+      "preferences": [
+        {
+          "name": "hidenWhenDecaffeinated",
+          "description": "Hide the icon when decaffeinated",
+          "type": "checkbox",
+          "required": false,
+          "default": false,
+          "title": "When Decaffeinated",
+          "label": "Hide the icon"
+        }
+      ]
     },
     {
       "name": "caffeinateToggle",
@@ -54,6 +69,47 @@
       "title": "Caffeinate For",
       "subtitle": "Coffee",
       "description": "Prevent your Mac from sleeping for a certain time",
+      "mode": "no-view",
+      "arguments": [
+        {
+          "name": "hours",
+          "placeholder": "Hours",
+          "type": "text",
+          "required": false
+        },
+        {
+          "name": "minutes",
+          "placeholder": "Minutes",
+          "type": "text",
+          "required": false
+        },
+        {
+          "name": "seconds",
+          "placeholder": "Seconds",
+          "type": "text",
+          "required": false
+        }
+      ]
+    },
+    {
+      "name": "caffeinateUntil",
+      "title": "Caffeinate Until",
+      "subtitle": "Coffee",
+      "description": "Prevent your Mac from sleeping until a certain time",
+      "mode": "no-view",
+      "arguments": [
+        {
+          "name": "time",
+          "placeholder": "Time",
+          "type": "text",
+          "required": true
+        }
+      ]
+    },
+    {
+      "name": "addSchedule",
+      "title": "Schedule Caffeination",
+      "description": "Schedule caffeination",
       "mode": "view"
     },
     {
@@ -61,7 +117,93 @@
       "title": "Caffeinate Status",
       "description": "Show the current caffeination status",
       "mode": "no-view",
-      "interval": "1m"
+      "interval": "15s"
+    }
+  ],
+  "tools": [
+    {
+      "name": "caffeinate-for",
+      "title": "Caffeinate for Duration",
+      "description": "Keeps your Mac awake for a specified duration",
+      "instructions": "Prevents your Mac from going to sleep for a specified duration",
+      "input": {
+        "type": "object",
+        "properties": {
+          "hours": {
+            "type": "number",
+            "description": "Number of hours (optional). Must be a non-negative integer."
+          },
+          "minutes": {
+            "type": "number",
+            "description": "Number of minutes (optional). Must be a non-negative integer."
+          },
+          "seconds": {
+            "type": "number",
+            "description": "Number of seconds (optional). Must be a non-negative integer."
+          }
+        },
+        "required": []
+      },
+      "confirmation": false
+    },
+    {
+      "name": "caffeinate",
+      "title": "Caffeinate",
+      "description": "Keep Mac awake for unspecified duration.",
+      "instructions": "Prevents your Mac from going to sleep indefinitely until manually disabled",
+      "confirmation": false
+    },
+    {
+      "name": "check-caffeination-status",
+      "title": "Check Caffeination Status",
+      "description": "Check if your Mac is currently caffeinated or not.",
+      "instructions": "Checks if your Mac is currently prevented from sleeping",
+      "confirmation": false
+    },
+    {
+      "name": "decaffeinate",
+      "title": "Decaffeinate",
+      "description": "Turn off your Mac's sleep prevention.",
+      "instructions": "Turns off caffeination, allowing your Mac to go to sleep normally",
+      "confirmation": false
+    },
+    {
+      "name": "schedule-caffeination",
+      "title": "Schedule Caffeination",
+      "description": "Add a schedule for your caffeination using AI.",
+      "instructions": "Creates a new caffeination schedule\nExample: \"Monday and Tuesday from 09:00 to 17:00\"\nExample: \"Everyday except weekends from 09:00 to 17:00\"\nExample: \"All days from 09:00 to 18:00\"",
+      "input": {
+        "type": "object",
+        "properties": {
+          "schedule": {
+            "type": "string",
+            "description": "Schedule description (e.g., \"Monday and Tuesday from 09:00 to 17:00\")"
+          }
+        },
+        "required": [
+          "schedule"
+        ]
+      },
+      "confirmation": false
+    },
+    {
+      "name": "caffeinate-while-app-is-running",
+      "title": "Caffeinate While App Is Running",
+      "description": "While an app is running, turn on caffeination.",
+      "instructions": "Prevents your Mac from sleeping while a specific application is running",
+      "input": {
+        "type": "object",
+        "properties": {
+          "application": {
+            "type": "string",
+            "description": "Name of the application to watch (e.g., \"Zoom\", \"Chrome\", \"Photoshop\")"
+          }
+        },
+        "required": [
+          "application"
+        ]
+      },
+      "confirmation": false
     }
   ],
   "preferences": [
@@ -72,7 +214,7 @@
       "required": false,
       "default": true,
       "title": "Options",
-      "label": "Prevent Display Sleep"
+      "label": "Prevent display sleep"
     },
     {
       "name": "preventSystem",
@@ -80,7 +222,7 @@
       "type": "checkbox",
       "required": false,
       "default": true,
-      "label": "Prevent System Sleep"
+      "label": "Prevent system sleep"
     },
     {
       "name": "preventDisk",
@@ -88,46 +230,46 @@
       "type": "checkbox",
       "required": false,
       "default": true,
-      "label": "Prevent Disk Sleep"
+      "label": "Prevent disk sleep"
     },
     {
       "name": "icon",
       "description": "Select icon set for Menu Bar",
       "type": "dropdown",
       "required": false,
-      "default": "coffee-pot",
+      "default": "pot",
       "title": "Menu Bar Icon",
       "data": [
         {
-          "title": "Coffee Pot",
-          "value": "coffee-pot"
+          "title": "Pot",
+          "value": "pot"
         },
         {
-          "title": "Coffee Mug 1",
-          "value": "coffee-mug-1"
+          "title": "Mug",
+          "value": "mug"
         },
         {
-          "title": "Coffee Mug 2",
-          "value": "coffee-mug-2"
+          "title": "Cup",
+          "value": "cup"
         },
         {
-          "title": "Coffee Paper Cup",
+          "title": "Paper Cup",
           "value": "paper-cup"
         }
       ]
     }
   ],
   "dependencies": {
-    "@raycast/api": "^1.62.2",
-    "@raycast/utils": "^1.10.1"
+    "@raycast/api": "^1.91.0",
+    "@raycast/utils": "^1.12.5"
   },
   "devDependencies": {
     "@raycast/eslint-config": "^1.0.8",
-    "@types/node": "20.10.0",
-    "@types/react": "18.2.38",
-    "eslint": "^8.54.0",
-    "prettier": "^3.1.0",
-    "typescript": "^5.3.2"
+    "@types/node": "20.11.19",
+    "@types/react": "^18.3.3",
+    "eslint": "^8.56.0",
+    "prettier": "^3.2.5",
+    "typescript": "^5.3.3"
   },
   "scripts": {
     "build": "ray build -e dist",
@@ -135,5 +277,167 @@
     "fix-lint": "ray lint --fix",
     "lint": "ray lint",
     "publish": "npx @raycast/api@latest publish"
-  }
+  },
+  "ai": {
+    "instructions": "Before running any tool, always run check-caffeination-status before to check the status",
+    "evals": [
+      {
+        "input": "@coffee keep my mac awake for 2 hours",
+        "mocks": {
+          "check-caffeination-status": {
+            "isCaffeinated": false,
+            "isScheduled": false
+          },
+          "caffeinate-for": {
+            "success": true
+          }
+        },
+        "expected": [
+          {
+            "callsTool": {
+              "name": "caffeinate-for",
+              "arguments": {
+                "hours": 2
+              }
+            }
+          },
+          {
+            "meetsCriteria": "Confirms the duration Mac will stay awake"
+          }
+        ]
+      },
+      {
+        "input": "@coffee caffeinate while Zoom is running",
+        "mocks": {
+          "check-caffeination-status": {
+            "isCaffeinated": false,
+            "isScheduled": false
+          },
+          "caffeinate-while-app-is-running": {
+            "success": true,
+            "application": "Zoom",
+            "processId": "12345"
+          }
+        },
+        "expected": [
+          {
+            "callsTool": "check-caffeination-status"
+          },
+          {
+            "callsTool": {
+              "name": "caffeinate-while-app-is-running",
+              "arguments": {
+                "application": {
+                  "includes": "zoom"
+                }
+              }
+            }
+          },
+          {
+            "meetsCriteria": "Confirms that Mac will stay awake while Zoom is running"
+          }
+        ]
+      },
+      {
+        "input": "@coffee stop keeping my mac awake",
+        "mocks": {
+          "check-caffeination-status": {
+            "isCaffeinated": true,
+            "isScheduled": false
+          },
+          "decaffeinate": {
+            "success": true
+          }
+        },
+        "expected": [
+          {
+            "callsTool": "check-caffeination-status"
+          },
+          {
+            "callsTool": "decaffeinate"
+          },
+          {
+            "meetsCriteria": "Confirms that sleep prevention has been disabled"
+          }
+        ]
+      },
+      {
+        "input": "@coffee is my mac preventing sleep?",
+        "mocks": {
+          "check-caffeination-status": {
+            "isCaffeinated": true,
+            "isScheduled": false
+          }
+        },
+        "expected": [
+          {
+            "callsTool": "check-caffeination-status"
+          },
+          {
+            "meetsCriteria": "Clearly states whether the Mac is currently caffeinated or not"
+          }
+        ]
+      },
+      {
+        "input": "@coffee schedule caffeination for weekdays from 09:00 to 17:00",
+        "mocks": {
+          "check-caffeination-status": {
+            "isCaffeinated": false,
+            "isScheduled": false
+          },
+          "schedule-caffeination": {
+            "success": true,
+            "days": [
+              "monday",
+              "tuesday",
+              "wednesday",
+              "thursday",
+              "friday"
+            ]
+          }
+        },
+        "expected": [
+          {
+            "callsTool": {
+              "name": "schedule-caffeination",
+              "arguments": {
+                "schedule": {
+                  "includes": "weekdays"
+                }
+              }
+            }
+          },
+          {
+            "meetsCriteria": "Confirms the caffeination schedule was created"
+          }
+        ]
+      },
+      {
+        "input": "@coffee prevent my mac from sleeping",
+        "mocks": {
+          "check-caffeination-status": {
+            "isCaffeinated": false,
+            "isScheduled": false
+          },
+          "caffeinate": {
+            "success": true
+          }
+        },
+        "expected": [
+          {
+            "callsTool": "check-caffeination-status"
+          },
+          {
+            "callsTool": "caffeinate"
+          },
+          {
+            "meetsCriteria": "Confirms that Mac will stay awake"
+          }
+        ]
+      }
+    ]
+  },
+  "platforms": [
+    "macOS"
+  ]
 }
